log
Wed 27 Mar 2024 02:40:47 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   lista->head=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   lista->tail=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   lista->current=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dbc80f5
Wed 27 Mar 2024 02:41:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
609c27f
Wed 27 Mar 2024 06:34:11 PM UTC: 
 tests:  1|5
total_score: 10/70
a79c2e2
Wed 27 Mar 2024 06:35:10 PM UTC: 
 list.c | 65 +++++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 55 insertions(+), 10 deletions(-)
 tests:  0|0
1bff083
